--- a/glfw-pal.cabal
+++ b/glfw-pal.cabal
@@ -29,7 +29,7 @@ library
   ghc-options:         -Wall
 
 test-suite test
-  build-depends:       base, glfw-pal, gl
+  build-depends:       base, glfw-pal, gl, glfw
   default-language:    Haskell2010
   hs-source-dirs:      test
   main-is:             test.hs
