--- a/glfw-pal.cabal
+++ b/glfw-pal.cabal
@@ -23,13 +23,13 @@ library
     base, 
     GLFW-b, 
     stm, 
-    mtl
+    mtl, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
 
 test-suite test
-  build-depends:       base, glfw-pal, gl, glfw
+  build-depends:       base, glfw-pal, gl
   default-language:    Haskell2010
   hs-source-dirs:      test
   main-is:             test.hs
