--- a/glfw-pal.cabal
+++ b/glfw-pal.cabal
@@ -26,7 +26,8 @@ library
     mtl, containers
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wall
+  ghc-prof-options:    -Wall -O2 -fprof-auto
+  ghc-options:         -Wall -O2
 
 test-suite test
   build-depends:       base, glfw-pal, gl
