--- a/glfw-pal.cabal
+++ b/glfw-pal.cabal
@@ -19,11 +19,13 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Graphics.UI.GLFW.Pal
   -- other-modules:       
-  build-depends:       
-    base, 
-    GLFW-b, 
-    stm, 
-    mtl, containers
+  build-depends:       base
+                     , GLFW-b
+                     , stm
+                     , mtl
+                     , containers
+                     , linear-extra
+                     , lens
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-prof-options:    -Wall -O2 -fprof-auto
