--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,5 @@
 flags: {}
-extra-deps:
-- GLFW-b-1.4.7.2
-- bindings-GLFW-3.1.1.3
 packages:
 - '.'
-resolver: lts-3.0
-arch: x86_64
+- '../linear-extra'
+resolver: nightly-2015-11-03
